--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,12 @@ body,
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+h2.MuiTypography-root.MuiTypography-h2.css-1rcsy0y-MuiTypography-root {
+  font-family: "Source Sans 3",sans-serif;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #141414;
+  font-weight: 700;
+  margin: 10px 0 0 0;
+}
